--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "mini-css-extract-plugin": "^0.11.0",
     "postcss-loader": "^3.0.0",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "core-js": "^3.6.5"
