--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mesto",
   "version": "1.0.0",
   "description": "### Ярослав Карданец",
-  "main": "./src/index.js",
+  "main": "./src/pages/index.js",
   "scripts": {
     "build": "rm -rf dist && webpack",
     "dev": "webpack-dev-server --open --watch"
